--- a/style.css
+++ b/style.css
@@ -1,50 +1,131 @@
-.new-book,
-form {
-    margin-left: 30rem;
+.form{
+  display: none; 
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
+}
+.form-inputs{
+  background-color: #fefefe;
+  margin: 3% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; 
+  height: 80%;
+  background-color: bisque;
+  color: brown;
+}
+.books {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start; 
+  width: 100%;
+  margin:0 auto;
+  gap: 10px;
+  
 }
 
-.popup {
-    margin-top: 1rem;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 20%;
-    background-color: bisque;
-    color: brown;
-    display: none;
+.popup{
+  text-align: center;
+  
 }
 
 img {
     width: 20%;
-    margin-top: 1rem;
+    display: block;
+    margin: auto;
+}
+
+.close {
+  color: rgb(25, 235, 53);
+  position: absolute;
+  top:0;
+  right:8.5rem;
+  cursor: alias;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 3% auto; 
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 label,
 .read {
     padding: 0.5rem;
+    display:block;
 }
 
+input{
+  width: 40%;
+  padding: 4px;
+}
+input:hover{
+  background-color: rgb(240, 160, 140);
+  
+}
 ::placeholder {
     text-align: center;
     font-size: 0.6rem;
     color: green;
 }
 
+
 .btn {
     margin: 0.5rem;
-    width: 50%;
+    width: 20%;
     padding: 0.2rem;
+    display: block;
+    margin:9px auto;
     background-color: rgb(140, 240, 140);
     color: #fff;
     border: none;
     border-radius: 0.2rem;
+   
 }
 
-@media (max-width: 992px) {
-  .new-book,
-  form {
-    margin-left: 15rem;
-  }
+.btn:hover{
+  background-color: rgb(140, 163, 240);
+  color: black;
+}
+
+
+.book-card{
+  background-color: green;
+  color:#fff;
+  width: 15%;
+  margin-top: 0.5rem;
+  border-radius: 1rem;
+  word-wrap: break-word;
+  font-size: 0.8rem;
+  text-align: center;
+
+  
+}
+.remove-book,
+.read-status{
+  background-color: wheat;
+  color:green;
+  text-align: center;
+  margin: 0.2rem;
+  border: none;
+  border-radius:0.2rem;
+  padding: 0.2rem;
+}
+/* .isRead{
+  width: 20%;
+  display: inline;
+} */
+
+/* @media (max-width: 992px) {
+ 
   input {
     width: 80%;    
   }
@@ -70,23 +151,23 @@ label,
     border-radius: 0.2rem;
   }
 
-}
+} */
 
-@media(max-width: 600px) {
-  .new-book,
+/* @media(max-width: 600px) {
+  /* .new-book,
   form {
     margin-left: 0;
     text-align: center;
-  }
+  } */
 
-  .popup {
+  /* .popup {
     width: 100%;
     background-color:rgb(9, 32,63);
     color: bisque;
     display: none;
-  }
+  } */
 
-  .btn { 
+   /* .btn { 
     margin: 0.5rem;
     width: 50%;
     padding: 0.2rem;
@@ -94,5 +175,5 @@ label,
     color: #fff;
     border: none;
     border-radius: 0.2rem;
-  }
-}
+   } 
+}  */
