--- a/style.css
+++ b/style.css
@@ -9,12 +9,11 @@
   background-color: rgba(0,0,0,0.4);
 }
 .form-inputs{
-  background-color: #fefefe;
   margin: 3% auto; 
-  padding: 20px;
+  padding: 1rem;
   border: 1px solid #888;
-  width: 80%; 
-  height: 80%;
+  width: 30%; 
+  height: 70%;
   background-color: bisque;
   color: brown;
 }
@@ -42,12 +41,15 @@ img {
 .close {
   color: rgb(25, 235, 53);
   position: absolute;
-  top:0;
-  right:8.5rem;
+  top:1rem;
   cursor: alias;
   font-size: 28px;
   font-weight: bold;
   margin: 3% auto; 
+ 
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 0.2rem;
 }
 
 .close:hover,
@@ -57,19 +59,21 @@ img {
   cursor: pointer;
 }
 
-label,
-.read {
+label{
     padding: 0.5rem;
     display:block;
 }
 
 input{
-  width: 40%;
+  width: 80%;
   padding: 4px;
 }
 input:hover{
   background-color: rgb(240, 160, 140);
   
+}
+.radio-btn{
+ width: 5%;
 }
 ::placeholder {
     text-align: center;
@@ -80,7 +84,7 @@ input:hover{
 
 .btn {
     margin: 0.5rem;
-    width: 20%;
+    width: 50%;
     padding: 0.2rem;
     display: block;
     margin:9px auto;
@@ -91,7 +95,6 @@ input:hover{
    
 }
 
-<<<<<<< HEAD
 .btn:hover{
   background-color: rgb(140, 163, 240);
   color: black;
@@ -120,69 +123,58 @@ input:hover{
   border-radius:0.2rem;
   padding: 0.2rem;
 }
-/* .isRead{
-  width: 20%;
-  display: inline;
-} */
 
-/* @media (max-width: 992px) {
- 
-=======
-
-@media (max-width: 992px) {
-  .new-book,
-  form {
-    margin-left: 15rem;
+@media (min-width:350px){
+  .form-inputs{
+    background-color: #fefefe;
+    margin: 3% auto; 
+    padding: 1rem;
+    border: 1px solid #888;
+    width: 60%; 
+    height: 80%;
+    background-color: bisque;
+    color: brown;
   }
->>>>>>> e95a4087d4f397d34fec19be4bab8f418e73ce7b
-  input {
-    width: 80%;    
+  .form-inputs{
+    background-color: #14245a;
+    color: rgb(91, 165, 42);
+
   }
-  .read{
-    display: flex;
-    align-items: center;
-  }
-
-  .popup{
-    width: 40%;
-    background-color: rgb(9, 77, 21);
-    color: rgb(240, 213, 140);
-    display: none;
-  }
-
-  .btn{
-    margin: 0.5rem;
-    width: 50%;
-    padding: 0.2rem;
-    background-color: rgb(240, 172, 140);
-    color: #fff;
-    border: none;
-    border-radius: 0.2rem;
-  }
-
-} */
-
-/* @media(max-width: 600px) {
-  /* .new-book,
-  form {
-    margin-left: 0;
-    text-align: center;
-  } */
-
-  /* .popup {
+  .books{
+    display: block;
     width: 100%;
-    background-color:rgb(9, 32,63);
-    color: bisque;
-    display: none;
-  } */
-
-   /* .btn { 
-    margin: 0.5rem;
-    width: 50%;
-    padding: 0.2rem;
-    background-color: rgb(240, 160, 140);
-    color: #fff;
-    border: none;
-    border-radius: 0.2rem;
-   } 
-}  */
+  }
+  .close {
+    
+    right:6.5rem;
+  }
+}
+@media (min-width:768px){
+  .form-inputs{
+    margin: 3% auto; 
+    padding: 1rem;
+    border: 1px solid #888;
+    width: 30%; 
+    height: 80%;
+    background-color: bisque;
+    color: brown;
+  }
+  .books{
+    display: flex;
+    
+  }
+  .close {
+    
+    right:16.5rem;
+  }
+}
+@media(min-width:992px){
+  .close {
+    right:22.5rem;
+  }
+}
+@media(min-width:1200px){
+  .close {
+    right:30.5rem;
+  }
+}
